[project]
name = "meta-prov-fixer"
version = "0.1.0"
description = "A toolkit to detect and fix issues in the OpenCitations Meta provenance dataset"
readme = "README.md"
license = "ISC"
authors = [
    { name = "Elia Rizzetto", email = "elia.rizzetto@gmail.com" },
    { name = "Arcangelo Massari", email = "arcangelo.massari@unibo.it" },
]
requires-python = ">=3.11, <3.14"
dependencies = [
    "docker>=7.1.0",
    "oc-ocdm>=9.4.4",
    "rdflib>=7.6.0",
    "sparqlite>=1.2.1",
    "sparqlwrapper>=2.0.0",
    "tqdm>=4.67.3",
    "tzdata>=2025.3",
]

[dependency-groups]
dev = [
    "ipykernel>=7.2.0",
    "notebook>=7.5.5",
    "pandas>=3.0.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
